--- a/login.html
+++ b/login.html
@@ -3,21 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <title>Login • GRUPO DV</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- evita zoom automático no mobile -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <style>
     :root{ --bg:#f6f8fb; --ink:#0f172a; --muted:#64748b; --card:#fff; --primary:#0ea5e9; --shadow:0 10px 30px rgba(2,6,23,.12) }
     *{box-sizing:border-box}
     body{margin:0;background:var(--bg);color:var(--ink);font-family:'Segoe UI',system-ui,-apple-system,sans-serif}
-    .wrap{min-height:100vh;display:grid;place-items:center;padding:18px}
-    .card{width:min(96vw,420px);background:var(--card);border-radius:16px;box-shadow:var(--shadow);padding:22px}
+    .wrap{min-height:100dvh;display:grid;place-items:center;padding:16px}
+    .card{width:min(94vw,420px);background:var(--card);border-radius:16px;box-shadow:var(--shadow);padding:20px}
     .brand{display:flex;align-items:center;gap:10px;margin-bottom:12px}
     .brand img{height:42px}
     h1{font-size:18px;margin:0}
     .muted{color:var(--muted);font-size:13px;margin:2px 0 14px}
     label{display:block;font-size:13px;margin:10px 0 6px;color:#334155}
-    input{width:100%;padding:12px;border:1px solid #e5e7eb;border-radius:12px;font-size:14px;background:#fff}
+    input{
+      width:100%;padding:12px;border:1px solid #e5e7eb;border-radius:12px;background:#fff;
+      font-size:16px; /* 16px evita zoom no iOS */
+    }
     .row{display:flex;gap:8px;align-items:center;margin-top:12px}
-    .btn{width:100%;padding:12px 14px;border:none;border-radius:999px;background:var(--primary);color:#fff;font-weight:600;cursor:pointer}
+    .btn{width:100%;padding:12px 14px;border:none;border-radius:999px;background:var(--primary);color:#fff;font-weight:600;cursor:pointer;font-size:16px}
     .btn[disabled]{opacity:.6;cursor:not-allowed}
     .err,.ok{border-radius:12px;padding:10px 12px;font-size:13px;display:none;margin-top:10px}
     .err{background:#fef2f2;color:#991b1b;border:1px solid #fecaca}
@@ -39,7 +43,7 @@
 
       <form id="form">
         <label for="usuario">Usuário</label>
-        <input id="usuario" name="usuario" autocomplete="username" required />
+        <input id="usuario" name="usuario" autocomplete="username" autocapitalize="none" inputmode="text" required />
 
         <label for="senha">Senha</label>
         <div class="field">
@@ -63,21 +67,22 @@
     </div>
   </div>
 
- <script>
+<script>
   // ====== CONFIG ======
-  const WEBAPP = 'https://script.google.com/macros/s/AKfycbw-uulvaPyrNy4vGr-KkkmrFP_s_VVthhuWEMrRulWehrCJ0CLMsO3uJwS83fnG_UgJSw/exec'; // <- troque pela URL da implantação
+  const WEBAPP = 'https://script.google.com/macros/s/AKfycbxmF23nDe_XI7RQ87rFS_a8KDgATYUCqvNrw3fnK0nLvJEdzYIWPa3HYVyOfkRPznnJlg/exec';
 
   // ====== Helpers ======
   const qs = (id)=>document.getElementById(id);
   const setBusy = (b)=>{ qs('btn').disabled=b; qs('btn').textContent=b?'Verificando…':'Entrar'; }
   const showErr = (m)=>{ const el=qs('err'); el.textContent=m||''; el.style.display=m?'block':'none'; qs('ok').style.display='none'; }
   const showOk  = (m)=>{ const el=qs('ok');  el.textContent=m||''; el.style.display=m?'block':'none'; qs('err').style.display='none'; }
+  const nextUrl = ()=> new URL(location.href).searchParams.get('next') || 'index.html';
 
   // id único do dispositivo (persistido no browser)
   function getOrCreateDeviceId(){
     const k='dv_device_id';
     let v=localStorage.getItem(k);
-    if(!v){ v=crypto.randomUUID?.() || (Date.now().toString(36)+Math.random().toString(36).slice(2)); localStorage.setItem(k,v); }
+    if(!v){ v=(crypto.randomUUID?.() || (Date.now().toString(36)+Math.random().toString(36).slice(2))); localStorage.setItem(k,v); }
     return v;
   }
 
@@ -86,60 +91,64 @@
     localStorage.setItem('auth_user', JSON.stringify({usuario:j.usuario, empresa:j.empresa, perfil:j.perfil}));
   }
 
-  function redirect(){
-    const next=new URL(location.href).searchParams.get('next')||'index.html';
-    location.href=next;
-  }
+  function redirect(){ location.href = nextUrl(); }
 
-  // ====== Verificar sessão (me) ======
+  // ====== Verificar sessão (me) – sem Authorization p/ evitar preflight ======
   async function me(){
     const token = localStorage.getItem('auth_token');
     if(!token) return null;
     try{
-      const url = `${WEBAPP}?fn=me&origin=${encodeURIComponent(location.origin)}`;
-      const r = await fetch(url, {
+      const r = await fetch(`${WEBAPP}?fn=me`, {
         method:'POST',
-        // usar text/plain evita preflight; o Apps Script lê normalmente
-        headers:{ 'Content-Type':'text/plain;charset=UTF-8', 'Authorization':'Bearer '+token },
-        body: JSON.stringify({ device_id: getOrCreateDeviceId() })
+        headers:{ 'Content-Type':'text/plain;charset=UTF-8' },
+        body: JSON.stringify({ token, device_id:getOrCreateDeviceId() })
       });
       const raw = await r.text();
-      let j; try{ j=JSON.parse(raw); }catch{ console.error('Resposta não-JSON:', raw); return null; }
+      const j = JSON.parse(raw);
       return j.ok ? j.user : null;
     }catch{ return null; }
   }
 
-  // ====== Autologin ======
+  // Auto-login se já houver token válido
   (async ()=>{ const u = await me(); if(u) redirect(); })();
 
-  // ====== UI ======
+  // UI
   qs('toggle').addEventListener('click', ()=>{
     const f=qs('senha'); const isPw=f.type==='password';
-    f.type = isPw?'text':'password'; qs('toggle').textContent = isPw?'ocultar':'mostrar'; f.focus();
+    f.type = isPw ? 'text' : 'password';
+    qs('toggle').textContent = isPw ? 'ocultar' : 'mostrar';
+    f.focus();
   });
 
-  // ====== Login ======
+  // ====== Login (com aprovação de aparelho) ======
   qs('form').addEventListener('submit', async (ev)=>{
     ev.preventDefault();
     showErr(''); showOk('');
     const usuario = qs('usuario').value.trim();
-    const senha   = qs('senha').value;           // pode ser ignorada no servidor se estiver usando liberação por aparelho
+    const senha   = qs('senha').value;
+    const remember= qs('remember').checked;
     if(!usuario || !senha){ showErr('Preencha usuário e senha.'); return; }
 
     setBusy(true);
     try{
-      const url = `${WEBAPP}?fn=login&origin=${encodeURIComponent(location.origin)}`;
-      const r = await fetch(url, {
+      const r = await fetch(`${WEBAPP}?fn=login`, {
         method:'POST',
-        headers:{ 'Content-Type':'text/plain;charset=UTF-8' },   // evita preflight
-        body: JSON.stringify({ usuario, senha, device_id: getOrCreateDeviceId() })
+        headers:{ 'Content-Type':'text/plain;charset=UTF-8' }, // evita CORS preflight
+        body: JSON.stringify({
+          usuario, senha, remember,
+          device: {
+            id:getOrCreateDeviceId(),
+            ua:navigator.userAgent,
+            w:window.innerWidth, h:window.innerHeight
+          }
+        })
       });
       const raw = await r.text();
-      let j; try{ j=JSON.parse(raw); }catch(e){ console.error('Resposta não-JSON:', raw); showErr('Resposta inválida do servidor.'); setBusy(false); return; }
+      let j; try{ j=JSON.parse(raw); }catch{ showErr('Resposta inválida do servidor.'); setBusy(false); return; }
 
-      // Fluxo “aparelho pendente” (se o script novo estiver ativo)
+      // Fluxo de aprovação manual
       if(j.status === 'pending'){
-        showOk('✅ Pedido enviado. Aguarde o admin liberar este aparelho.');
+        showOk('✅ Dispositivo registrado. Aguarde o administrador liberar este aparelho e tente novamente.');
         setBusy(false);
         return;
       }
@@ -161,6 +170,5 @@
     }
   });
 </script>
-
 </body>
 </html>
