--- a/login.html
+++ b/login.html
@@ -1,72 +1,3 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <title>Login • GRUPO DV</title>
-  <!-- evita zoom automático no mobile -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <style>
-    :root{ --bg:#f6f8fb; --ink:#0f172a; --muted:#64748b; --card:#fff; --primary:#0ea5e9; --shadow:0 10px 30px rgba(2,6,23,.12) }
-    *{box-sizing:border-box}
-    body{margin:0;background:var(--bg);color:var(--ink);font-family:'Segoe UI',system-ui,-apple-system,sans-serif}
-    .wrap{min-height:100dvh;display:grid;place-items:center;padding:16px}
-    .card{width:min(94vw,420px);background:var(--card);border-radius:16px;box-shadow:var(--shadow);padding:20px}
-    .brand{display:flex;align-items:center;gap:10px;margin-bottom:12px}
-    .brand img{height:42px}
-    h1{font-size:18px;margin:0}
-    .muted{color:var(--muted);font-size:13px;margin:2px 0 14px}
-    label{display:block;font-size:13px;margin:10px 0 6px;color:#334155}
-    input{
-      width:100%;padding:12px;border:1px solid #e5e7eb;border-radius:12px;background:#fff;
-      font-size:16px; /* 16px evita zoom no iOS */
-    }
-    .row{display:flex;gap:8px;align-items:center;margin-top:12px}
-    .btn{width:100%;padding:12px 14px;border:none;border-radius:999px;background:var(--primary);color:#fff;font-weight:600;cursor:pointer;font-size:16px}
-    .btn[disabled]{opacity:.6;cursor:not-allowed}
-    .err,.ok{border-radius:12px;padding:10px 12px;font-size:13px;display:none;margin-top:10px}
-    .err{background:#fef2f2;color:#991b1b;border:1px solid #fecaca}
-    .ok{background:#ecfdf5;color:#065f46;border:1px solid #a7f3d0}
-    .footer{margin-top:14px;font-size:12px;color:var(--muted);text-align:center}
-    .field{position:relative}
-    .toggle{position:absolute;right:12px;top:50%;transform:translateY(-50%);font-size:12px;color:#0369a1;background:#e0f2fe;border:1px solid #bae6fd;border-radius:999px;padding:2px 8px;cursor:pointer}
-    .remember{display:flex;align-items:center;gap:8px;margin-top:8px;font-size:13px;color:#334155}
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <div class="card">
-      <div class="brand">
-        <img src="https://github.com/ClenaStore/painel-principal/blob/main/img/GRUPO%20DV%20(1).png?raw=true" alt="Logo" />
-        <h1>Entrar</h1>
-      </div>
-      <div class="muted">Use seu usuário e senha. A validação ocorre no servidor (planilha privada).</div>
-
-      <form id="form">
-        <label for="usuario">Usuário</label>
-        <input id="usuario" name="usuario" autocomplete="username" autocapitalize="none" inputmode="text" required />
-
-        <label for="senha">Senha</label>
-        <div class="field">
-          <input id="senha" name="senha" type="password" autocomplete="current-password" required />
-          <button class="toggle" type="button" id="toggle">mostrar</button>
-        </div>
-
-        <label class="remember">
-          <input type="checkbox" id="remember" />
-          Manter conectado (não pedir senha novamente)
-        </label>
-
-        <div class="row">
-          <button class="btn" id="btn" type="submit">Entrar</button>
-        </div>
-        <div class="err" id="err"></div>
-        <div class="ok" id="ok"></div>
-      </form>
-
-      <div class="footer">Dica: em computador compartilhado, desmarque “manter conectado”.</div>
-    </div>
-  </div>
-
 <script>
   // ====== CONFIG ======
   const WEBAPP = 'https://script.google.com/macros/s/AKfycbzVR_6hWjV3znWB41HQjhUhGjDT-nq9RmIJy89LXETGJ9tJmf9_cAv6msxa7MNCf4JpZw/exec';
@@ -75,8 +6,25 @@
   const qs = (id)=>document.getElementById(id);
   const setBusy = (b)=>{ qs('btn').disabled=b; qs('btn').textContent=b?'Verificando…':'Entrar'; }
   const showErr = (m)=>{ const el=qs('err'); el.textContent=m||''; el.style.display=m?'block':'none'; qs('ok').style.display='none'; }
-  const showOk  = (m)=>{ const el=qs('ok');  el.textContent=m||''; el.style.display=m?'block':'none'; qs('err').style.display='none'; }
-  const nextUrl = ()=> new URL(location.href).searchParams.get('next') || 'index.html';
+  const showOk  = (m)=>{ const el=qs('ok');  el.innerHTML=m||''; el.style.display=m?'block':'none'; qs('err').style.display='none'; }
+
+  // === Redirect robusto ===
+  function getRedirectUrl(){
+    const cur = new URL(location.href);
+    const qnext = cur.searchParams.get('next');
+    if (qnext) {                      // aceita relativo (ex: index.relatorios.html) ou absoluto
+      try { return new URL(qnext, cur).href; } catch {}
+    }
+    const base = cur.href.slice(0, cur.href.lastIndexOf('/') + 1);
+    return base + 'index.html';       // default: index.html na MESMA pasta do login
+  }
+  function redirectNow(){
+    const dest = getRedirectUrl();
+    window.location.replace(dest);    // não volta pro login no botão "voltar"
+    setTimeout(()=>{                  // fallback caso algum navegador ignore o replace
+      if (location.href.includes('login')) location.href = dest;
+    }, 200);
+  }
 
   // id único do dispositivo (persistido no browser)
   function getOrCreateDeviceId(){
@@ -90,8 +38,6 @@
     localStorage.setItem('auth_token', j.token);
     localStorage.setItem('auth_user', JSON.stringify({usuario:j.usuario, empresa:j.empresa, perfil:j.perfil}));
   }
-
-  function redirect(){ location.href = nextUrl(); }
 
   // ====== Verificar sessão (me) – sem Authorization p/ evitar preflight ======
   async function me(){
@@ -110,7 +56,7 @@
   }
 
   // Auto-login se já houver token válido
-  (async ()=>{ const u = await me(); if(u) redirect(); })();
+  (async ()=>{ const u = await me(); if(u) redirectNow(); })();
 
   // UI
   qs('toggle').addEventListener('click', ()=>{
@@ -136,17 +82,12 @@
         headers:{ 'Content-Type':'text/plain;charset=UTF-8' }, // evita CORS preflight
         body: JSON.stringify({
           usuario, senha, remember,
-          device: {
-            id:getOrCreateDeviceId(),
-            ua:navigator.userAgent,
-            w:window.innerWidth, h:window.innerHeight
-          }
+          device: { id:getOrCreateDeviceId(), ua:navigator.userAgent, w:innerWidth, h:innerHeight }
         })
       });
       const raw = await r.text();
       let j; try{ j=JSON.parse(raw); }catch{ showErr('Resposta inválida do servidor.'); setBusy(false); return; }
 
-      // Fluxo de aprovação manual
       if(j.status === 'pending'){
         showOk('✅ Dispositivo registrado. Aguarde o administrador liberar este aparelho e tente novamente.');
         setBusy(false);
@@ -162,13 +103,13 @@
       }
 
       saveSession(j);
-      showOk('Acesso autorizado. Redirecionando…');
-      setTimeout(redirect, 500);
+      const destino = getRedirectUrl();
+      showOk(`Acesso autorizado. Redirecionando… Se não for automático, <a href="${destino}">clique aqui</a>.`);
+      setTimeout(redirectNow, 150);
     }catch(e){
       showErr('Falha de rede. Tente novamente.');
+    }finally{
       setBusy(false);
     }
   });
 </script>
-</body>
-</html>
