--- a/index.html
+++ b/index.html
@@ -5,110 +5,91 @@
   <title>Análise Financeira</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <!-- Carrega as configs globais (WEBAPP, etc.) -->
+  <!-- Configs globais (DEFINE window.CONFIG.WEBAPP) -->
   <script src="config.js"></script>
 
-  <!-- Guard de autenticação (usa CONFIG.WEBAPP) -->
+  <!-- Guard de autenticação -->
   <script>
     (async ()=>{
       function goLogin(){
-        location.href = 'login.html?next='+encodeURIComponent(location.pathname.split('/').pop());
+        const next = (location.pathname.split('/').pop() || 'index.html');
+        location.replace('login.html?next=' + encodeURIComponent(next)); // <- não deixa voltar
       }
       const WEBAPP = (window.CONFIG && window.CONFIG.WEBAPP);
-      if(!WEBAPP){
-        console.error('CONFIG.WEBAPP não definido. Crie config.js com window.CONFIG.WEBAPP.');
-        goLogin();
-        return;
-      }
+      if(!WEBAPP){ console.error('CONFIG.WEBAPP não definido'); goLogin(); return; }
+
       const token = localStorage.getItem('auth_token');
       if(!token){ goLogin(); return; }
+
       try{
-        const url = `${WEBAPP}?fn=me&origin=${encodeURIComponent(location.origin)}`;
-        const r = await fetch(url,{
-          method:'POST',
-          headers:{'Content-Type':'application/json','Authorization':'Bearer '+token},
-          body: JSON.stringify({})
+        // usa text/plain pra evitar preflight e reduzir “falha de rede”
+        const r = await fetch(`${WEBAPP}?fn=me`, {
+          method: 'POST',
+          headers: { 'Content-Type':'text/plain;charset=UTF-8' },
+          body: JSON.stringify({ token })
         });
-        const j = await r.json();
+        const raw = await r.text();
+        let j; try{ j = JSON.parse(raw); }catch{ goLogin(); return; }
         if(!j.ok){ localStorage.clear(); goLogin(); return; }
-        window.AUTH_USER = j.user; // {usuario,empresa,perfil,iat,[exp]}
+
+        window.AUTH_USER = j.user; // {usuario,empresa,perfil}
       }catch{
         goLogin();
       }
     })();
+
+    // **Bloqueia o botão voltar neste painel**
+    (function lockBack(){
+      // empurra um estado no histórico e reempurra quando o usuário tenta voltar
+      const push = ()=> history.pushState(null, '', location.href);
+      push();
+      window.addEventListener('popstate', (e)=> { push(); });
+    })();
   </script>
 
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: white;
+    body { margin:0; font-family:'Segoe UI',sans-serif; background:#fff; }
+    #splash{
+      position:fixed; inset:0; background:#fff; display:flex; align-items:center; justify-content:center;
+      z-index:9999; transition:opacity .5s ease;
     }
-    #splash {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-      transition: opacity 0.5s ease;
-    }
-    #splash img { width: 150px; animation: pulse 1.5s infinite; }
-    @keyframes pulse { 0%{transform:scale(1);opacity:1} 50%{transform:scale(1.05);opacity:.9} 100%{transform:scale(1);opacity:1} }
+    #splash img{ width:150px; animation:pulse 1.5s infinite }
+    @keyframes pulse{ 0%{transform:scale(1);opacity:1} 50%{transform:scale(1.05);opacity:.9} 100%{transform:scale(1);opacity:1} }
 
-    header {
-      background-color: white;
-      color: #2c3e50;
-      padding: 20px 40px;
-      display: flex;
-      align-items: center;
-      border-bottom: 1px solid #ccc;
+    header{
+      background:#fff; color:#2c3e50; padding:20px 16px; display:flex; align-items:center; border-bottom:1px solid #ccc;
+      gap:12px; flex-wrap:wrap;
     }
-    .logo-left { flex: 1; display: flex; align-items: center; }
-    .logo-left img { height: 60px; }
-
-    .user-profile { display: inline-block; margin-left: 15px; }
-    .user-profile img {
-      width: 36px; height: 36px; border-radius: 50%; object-fit: cover;
-      border: 2px solid #ccc; transition: transform .2s ease;
+    .logo-left{ display:flex; align-items:center }
+    .logo-left img{ height:56px; width:auto }
+    .title-center{ flex:1 1 auto }
+    .title-center h1{ margin:0; font-size:22px; font-weight:700 }
+    .spacer{ margin-left:auto; display:flex; align-items:center; gap:12px }
+    .relatorio-link{ text-decoration:none; font-size:22px; opacity:.6; transition:opacity .3s }
+    .relatorio-link:hover{ opacity:1 }
+    .user-profile img{
+      width:36px;height:36px;border-radius:50%;object-fit:cover;border:2px solid #ccc;transition:transform .2s ease
     }
-    .user-profile img:hover { transform: scale(1.1); border-color: #2980b9; }
+    .user-profile img:hover{ transform:scale(1.08); border-color:#2980b9 }
 
-    .title-left { flex: 2; text-align: left; }
-    .title-left h1 { font-size: 24px; margin: 0; font-weight: bold; }
-
-    .spacer { flex: 1; display: flex; justify-content: flex-end; }
-    .relatorio-link {
-      text-decoration: none; font-size: 22px; opacity: .5; cursor: pointer; transition: opacity .3s;
+    .container{
+      display:grid; grid-template-columns:repeat(2,1fr); gap:16px; padding:20px; max-width:1200px; margin:auto;
     }
-    .relatorio-link:hover { opacity: 1; }
-
-    .container {
-      display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px;
-      padding: 30px; max-width: 1200px; margin: auto;
+    .card{
+      background:#fff; border-radius:12px; padding:22px 16px; text-align:center; box-shadow:0 4px 10px rgba(0,0,0,.08);
+      transition:transform .2s ease, background-color .2s ease; text-decoration:none; color:inherit; min-height:110px;
     }
-    .card {
-      background: white; border-radius: 12px; padding: 30px 20px; text-align: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1); transition: transform .2s ease;
-      text-decoration: none; color: inherit;
-    }
-    .card:hover { transform: translateY(-5px); background-color: #f0f8ff; }
-    .card h2 { margin: 0; font-size: 20px; color: #2c3e50; }
-    .icon { font-size: 40px; color: #2980b9; margin-bottom: 10px; }
+    .card:hover{ transform:translateY(-4px); background:#f5fbff }
+    .card h2{ margin:6px 0 0; font-size:18px; color:#2c3e50; line-height:1.2; word-break:break-word }
+    .card .icon{ font-size:34px; color:#2980b9; }
 
-    @media (max-width: 500px) {
-      header { flex-direction: column; text-align: center; position: relative; }
-      .logo-left { display: none; }
-      .title-center { flex: none; width: 100%; }
-      .spacer { position: absolute; top: 10px; right: 20px; display: flex; align-items: center; gap: 10px; }
-      .card h2 { font-size: 18px; }
-      .icon { font-size: 32px; }
-      .card h2 { font-size: 18px; }
-      .icon { font-size: 32px; }
+    @media (max-width:700px){
+      .container{ grid-template-columns:1fr }
+      header{ padding:16px }
+      .title-center h1{ font-size:20px }
+      .card{ padding:18px 14px }
+      .card .icon{ font-size:30px }
+      .card h2{ font-size:16px }
     }
   </style>
 </head>
@@ -137,61 +118,22 @@
 
   <!-- Cards -->
   <div class="container">
-    <a class="card" href="index.resumofinanceiro.html">
-      <div class="icon">📈</div>
-      <h2>Resumo Financeiro</h2>
-    </a>
-
-    <a class="card" href="index.cancelamentos.html">
-      <div class="icon">❌</div>
-      <h2>Cancelamentos</h2>
-    </a>
-
-    <a class="card" href="index.delivery.html">
-      <div class="icon">🚚</div>
-      <h2>Vendas Delivery</h2>
-    </a>
-
-    <a class="card" href="index.meta.html">
-      <div class="icon">📊</div>
-      <h2>Meta de Faturamento</h2>
-    </a>
-
-    <a class="card" href="index.travas.html">
-      <div class="icon">🔒</div>
-      <h2>Travas</h2>
-    </a>
-
-    <a class="card" href="index.conciliacao.html">
-      <div class="icon">💳</div>
-      <h2>Conciliações</h2>
-    </a>
-
-    <!-- Se quiser, pode mover esta URL externa para CONFIG.PAGES.CAP_APROVACAO e usar via JS -->
-    <a class="card" href="https://grupodvbr.github.io/SISTEMA-CAP-GRUPO-DV/aprovacao.html">
-      <div class="icon">✅</div>
-      <h2>Aprovação de CAP</h2>
-    </a>
-
-    <a class="card" href="index.abc.html">
-      <div class="icon">ABC</div>
-      <h2>ABC de Vendas</h2>
-    </a>
-
-    <a class="card" href="index.avaliacoes.html">
-      <div class="icon">🔎</div>
-      <h2>Pesquisa de satisfação</h2>
-    </a>
+    <a class="card" href="index.resumofinanceiro.html"><div class="icon">📈</div><h2>Resumo Financeiro</h2></a>
+    <a class="card" href="index.cancelamentos.html"><div class="icon">❌</div><h2>Cancelamentos</h2></a>
+    <a class="card" href="index.delivery.html"><div class="icon">🚚</div><h2>Vendas Delivery</h2></a>
+    <a class="card" href="index.meta.html"><div class="icon">📊</div><h2>Meta de Faturamento</h2></a>
+    <a class="card" href="index.travas.html"><div class="icon">🔒</div><h2>Travas</h2></a>
+    <a class="card" href="index.conciliacao.html"><div class="icon">💳</div><h2>Conciliações</h2></a>
+    <a class="card" href="https://grupodvbr.github.io/SISTEMA-CAP-GRUPO-DV/aprovacao.html"><div class="icon">✅</div><h2>Aprovação de CAP</h2></a>
+    <a class="card" href="index.abc.html"><div class="icon">ABC</div><h2>ABC de Vendas</h2></a>
+    <a class="card" href="index.avaliacoes.html"><div class="icon">🔎</div><h2>Pesquisa de satisfação</h2></a>
   </div>
 
-  <!-- Script splash -->
+  <!-- Splash fade -->
   <script>
-    window.addEventListener('load', () => {
+    window.addEventListener('load', ()=>{
       const splash = document.getElementById('splash');
-      setTimeout(() => {
-        splash.style.opacity = '0';
-        setTimeout(() => splash.style.display = 'none', 500);
-      }, 1000);
+      setTimeout(()=>{ splash.style.opacity='0'; setTimeout(()=> splash.style.display='none', 450); }, 900);
     });
   </script>
 
